Fixed navbar collapse media querie.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -585,6 +585,9 @@
   .nav > li > a:hover, .nav > li > a:focus {
     background: transparent;
   }
+  .navbar-brand {
+    margin-left: 0 !important;
+  }
   .navbar-nav > li > a {
     padding-left: 13px;
     padding-right: 13px;
